# IVS-project2

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  hodnoceni.txt  skutecnost.txt
doc/: .gitignore  Makefile  dokumentace.tex
plan/: xtobol06_xtesar43_xsteti05_xhalen00_plan.txt
profiling/: prof_result10.txt  prof_result1000.txt  prof_result1000000.txt  protokol.tex  zprava.txt
src/: CMakeLists.txt  Calculator.pro  Doxyfile  Makefile  calc-lib.cpp  calc-lib.hpp  calc.cpp  calc.h  calc.ui  calculator.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  stddev.cpp
src/installer-dep/debian/: control  install
src/installer-dep/install/: calculator.desktop
src/installer-stddev-dep/debian/: control  install
src/tests/: mathlib-tests-advanced.cpp  mathlib-tests-basic.cpp  mathlib-tests-evaluate.cpp
